adjust preconditions to properly skip unlabeled pods
Signed-off-by: Indrranil Pawar <indrranil7@gmail.com>

--- a/karpenter/add-karpenter-donot-disrupt/add-karpenter-donot-disrupt.yaml
+++ b/karpenter/add-karpenter-donot-disrupt/add-karpenter-donot-disrupt.yaml
@@ -19,17 +19,16 @@ spec:
   rules:
     - name: add-donot-disrupt-label
       match:
-        any:
-          - resources:
-              kinds:
-                - Pod
+        resources:
+          kinds:
+            - Pod
       preconditions:
         all:
-          - key: '{{request.object.metadata.labels."karpenter.sh/do-not-evict"}}'
-            operator: Equals
-            value: "true"
+          - key: '{{ request.object.metadata.labels."karpenter.sh/do-not-evict" || '''' }}'
+            operator: NotEquals
+            value: ""
       mutate:
         patchStrategicMerge:
           metadata:
             labels:
-              "karpenter.sh/do-not-disrupt": "true"
+              karpenter.sh/do-not-disrupt: "true"
