set background to false
Signed-off-by: Damien Degois <damien@degois.info>

--- a/opentelemetry/inject-otel-environment-variable/inject-otel-environment-variable.yaml
+++ b/opentelemetry/inject-otel-environment-variable/inject-otel-environment-variable.yaml
@@ -17,6 +17,7 @@ metadata:
       and `cache.kyverno.io/enabled: "true"` should be set on the `namespacefilters` ConfigMap (see rule comments ConfigMap-NS-Filtering).
 
 spec:
+  background: false
   rules:
   - name: inject-otel-environment-variable
     context:
