--- a/pod-security-cel/restricted/kustomization.yaml
+++ b/pod-security-cel/restricted/kustomization.yaml
@@ -1,3 +1,8 @@
+---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - disallow-capabilities-strict/disallow-capabilities-strict.yaml
   - disallow-privilege-escalation/disallow-privilege-escalation.yaml
