--- a/pod-security/baseline/kustomization.yaml
+++ b/pod-security/baseline/kustomization.yaml
@@ -1,3 +1,8 @@
+---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - disallow-capabilities/disallow-capabilities.yaml
   - disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -10,4 +15,3 @@ resources:
   - restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
   - restrict-seccomp/restrict-seccomp.yaml
   - restrict-sysctls/restrict-sysctls.yaml
-  
