--- a/pod-security/enforce/kustomization.yaml
+++ b/pod-security/enforce/kustomization.yaml
@@ -1,5 +1,10 @@
+---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
-- ../restricted
+  - ../restricted
 
 patches:
   - patch: |-
