fix(tests): result != expected should fail a test
Signed-off-by: Karol Bakunowski <bakunowskikarol@gmail.com>

--- a/other/allowed-label-changes/allowed-label-changes.yaml
+++ b/other/allowed-label-changes/allowed-label-changes.yaml
@@ -42,6 +42,6 @@ spec:
       deny:
         conditions:
           any:
-            - key: "{{ request.object.metadata.labels || `{}` |  merge(@, {breakglass:null}) }}"
-              operator: NotEquals
-              value: "{{ request.oldObject.metadata.labels || `{}` |  merge(@, {breakglass:null}) }}"
+            - key: "{{ request.object.metadata.labels | keys(@) }}"
+              operator: NotIn
+              value: ["breakglass"]
