--- a/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
+++ b/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
@@ -1,6 +1,6 @@
 #The described logic currently deletes the ReplicaSets created 30 seconds ago. You can adjust this timeframe according to your specific requirements.
 apiVersion: kyverno.io/v2beta1
-kind: ClusterCleanupPolicy
+kind: ClusterPolicy
 metadata:
   name: cleanup-empty-replicasets
   annotations:
