Update verify-tekton-image-cosign-signed.yaml  signed-off-by: Arunvel Arunachalam <arunvel.arunachalam@infosys.com>
Signed-off-by: Arunvel Arunachalam <arunvel.arunachalam@infosys.com>

--- a/tekton/verify-tekton-image-cosign-signed/verify-tekton-image-cosign-signed.yaml
+++ b/tekton/verify-tekton-image-cosign-signed/verify-tekton-image-cosign-signed.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/minversion: 1.7.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
-      A signed image is required to maintain supply chain security
+      A cosign signed image is required to maintain supply chain security
 spec:
   validationFailureAction: Enforce
   background: true
