adding tekton policy to verify cosigned image
Signed-off-by: arunvel1988 <aryan.arunachalam@gmail.com>

--- a/tekton/verify-tekton-pipeline-cosign-signated-images/test.yaml
+++ b/tekton/verify-tekton-pipeline-cosign-signated-images/test.yaml
@@ -3,7 +3,7 @@ kind: Test
 metadata:
   name: require-signed-images-registry
 policies:
-  - ../cosign-policy.yaml
+  - ./verify-tekton-pipelines-cosign-signed-images.yml
 resources:
   - resource.yaml
 results:
