policy-assertion field
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/pod-security-vpol/restricted/disallow-capabilities-strict/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security-vpol/restricted/disallow-capabilities-strict/.chainsaw-test/chainsaw-test.yaml
@@ -21,8 +21,8 @@ spec:
           spec:
             validationActions: 
              - Deny
-    - assert:
-        file: policy-ready.yaml
+    # - assert:
+    #     file: policy-ready.yaml
     - sleep:
         duration: 10s
   - name: step-02
