--- a/pod-security/subrule/restricted/restricted-latest/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/pod-security/subrule/restricted/restricted-latest/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -3,7 +3,8 @@ kind: ClusterPolicy
 metadata:
   name: podsecurity-subrule-restricted
 status:
-  conditions:
+  conditionStatus:
+    conditions:
   - reason: Succeeded
     status: "True"
     type: Ready
