--- a/pod-security/baseline/disallow-host-path/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/pod-security/baseline/disallow-host-path/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -3,7 +3,8 @@ kind: ClusterPolicy
 metadata:
   name: disallow-host-path
 status:
-  conditions:
+  conditionStatus:
+    conditions:
   - reason: Succeeded
     status: "True"
     type: Ready
