--- a/pod-security/baseline/disallow-proc-mount/.chainsaw-test/policy-ready.yaml
+++ b/pod-security/baseline/disallow-proc-mount/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ClusterPolicy
 metadata:
   name: disallow-proc-mount
 status:
-  conditions:
+  conditionStatus:
+    conditions:
   - reason: Succeeded
     status: "True"
     type: Ready
