--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/policy-ready.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ClusterPolicy
 metadata:
   name: podsecurity-subrule-restricted-capabilities
 status:
-  conditions:
+  conditionStatus:
+    conditions:
   - reason: Succeeded
     status: "True"
     type: Ready
