--- a/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -3,7 +3,6 @@ kind: ValidatingPolicy
 metadata:
   name: require-run-as-non-root-user
   annotations:
-    pod-policies.kyverno.io/autogen-controllers: deployments,cronjobs 
     policies.kyverno.io/title: Require Run As Non-Root User in ValidatingPolicy
     policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
     policies.kyverno.io/severity: medium
@@ -26,37 +25,28 @@ spec:
         apiVersions: ["v1"]
         operations:  ["CREATE", "UPDATE"]
         resources:   ["pods"]
+  variables:
+  - name: allContainers
+    expression: >-
+      object.spec.containers + 
+      (has(object.spec.initContainers) ? object.spec.initContainers : []) + 
+      (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
+
   validations:
-            - expression: >-
-                !has(object.spec.securityContext) ||
-                !has(object.spec.securityContext.runAsUser) ||
-                object.spec.securityContext.runAsUser > 0
-              message: >-
-                Running as root is not allowed. The field spec.securityContext.runAsUser must be unset or
-                set to a number greater than zero.
+  - expression: >-
+      !has(object.spec.securityContext) || 
+      !has(object.spec.securityContext.runAsUser) || 
+      object.spec.securityContext.runAsUser > 0
+    message: >-
+      Running as root is not allowed. The field spec.securityContext.runAsUser 
+      must be unset or set to a number greater than zero.
 
-            - expression: >-
-                object.spec.containers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.runAsUser) ||
-                container.securityContext.runAsUser > 0)
-              message: >-
-                Running as root is not allowed. The field spec.containers[*].securityContext.runAsUser must be unset or
-                set to a number greater than zero
-
-            - expression: >-
-                !has(object.spec.initContainers) ||
-                object.spec.initContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.runAsUser) ||
-                container.securityContext.runAsUser > 0)
-              message: >-
-                Running as root is not allowed. The field spec.initContainers[*].securityContext.runAsUser must be unset or
-                set to a number greater than zero
-
-            - expression: >-
-                !has(object.spec.ephemeralContainers) ||
-                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.runAsUser) ||
-                container.securityContext.runAsUser > 0)
-              message: >-
-                Running as root is not allowed. The field spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
-                set to a number greater than zero
+  - expression: >-
+      variables.allContainers.all(container, 
+        !has(container.securityContext) || 
+        !has(container.securityContext.runAsUser) || 
+        container.securityContext.runAsUser > 0)
+    message: >-
+      Running as root is not allowed. The field spec.containers[*].securityContext.runAsUser, 
+      spec.initContainers[*].securityContext.runAsUser, and 
+      spec.ephemeralContainers[*].securityContext.runAsUser must be unset or set to a number greater than zero.
