--- a/pod-security-vpol/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security-vpol/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -3,7 +3,6 @@ kind: ValidatingPolicy
 metadata:
   name: require-run-as-nonroot
   annotations:
-    pod-policies.kyverno.io/autogen-controllers: deployments,cronjobs 
     policies.kyverno.io/title: Require runAsNonRoot in ValidatingPolicy
     policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
     policies.kyverno.io/severity: medium
@@ -26,35 +25,29 @@ spec:
         apiVersions: ["v1"]
         operations:  ["CREATE", "UPDATE"]
         resources:   ["pods"]
+  variables:
+  - name: allContainers
+    expression: >-
+      object.spec.containers + 
+      (has(object.spec.initContainers) ? object.spec.initContainers : []) + 
+      (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
+
   validations:
-            - expression: >-
-                (
-                    (
-                      has(object.spec.securityContext) &&
-                      has(object.spec.securityContext.runAsNonRoot) &&
-                      object.spec.securityContext.runAsNonRoot == true
-                    ) && (
-                      (
-                          object.spec.containers +
-                          (has(object.spec.initContainers) ? object.spec.initContainers : []) +
-                          (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
-                      ).all(container,
-                          !has(container.securityContext) ||
-                          !has(container.securityContext.runAsNonRoot) ||
-                          container.securityContext.runAsNonRoot == true)
-                    )
-                ) || (
-                    (
-                        object.spec.containers +
-                        (has(object.spec.initContainers) ? object.spec.initContainers : []) +
-                        (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
-                    ).all(container,
-                        has(container.securityContext) &&
-                        has(container.securityContext.runAsNonRoot) &&
-                        container.securityContext.runAsNonRoot == true)
-                )
-              message: >-
-                Running as root is not allowed. Either the field spec.securityContext.runAsNonRoot or all of
-                spec.containers[*].securityContext.runAsNonRoot, spec.initContainers[*].securityContext.runAsNonRoot and
-                spec.ephemeralContainers[*].securityContext.runAsNonRoot, must be set to true.
-                
+  - expression: >-
+      (
+        (has(object.spec.securityContext) &&
+         has(object.spec.securityContext.runAsNonRoot) &&
+         object.spec.securityContext.runAsNonRoot == true) &&
+        variables.allContainers.all(container, 
+          !has(container.securityContext) || 
+          !has(container.securityContext.runAsNonRoot) || 
+          container.securityContext.runAsNonRoot == true)
+      ) || 
+      variables.allContainers.all(container, 
+        has(container.securityContext) && 
+        has(container.securityContext.runAsNonRoot) && 
+        container.securityContext.runAsNonRoot == true)
+    message: >-
+      Running as root is not allowed. Either spec.securityContext.runAsNonRoot 
+      must be set to true, or all containers (spec.containers[*], spec.initContainers[*], 
+      spec.ephemeralContainers[*]) must have securityContext.runAsNonRoot set to true.
