revert the assertion change
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/pod-security-vpol/baseline/disallow-capabilities/.chainsaw-test/policy-ready.yaml
+++ b/pod-security-vpol/baseline/disallow-capabilities/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ValidatingPolicy
 metadata:
   name: disallow-capabilities
 status:
-  conditions:
+  conditionStatus:
+    conditions:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
