--- a/pod-security-vpol/baseline/disallow-host-ports/.chainsaw-test/policy-ready.yaml
+++ b/pod-security-vpol/baseline/disallow-host-ports/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ValidatingPolicy
 metadata:
   name: disallow-host-ports
 status:
-  conditions:
+  conditionStatus:
+    conditions:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
