--- a/pod-security-vpol/restricted/disallow-privilege-escalation/.chainsaw-test/policy-ready.yaml
+++ b/pod-security-vpol/restricted/disallow-privilege-escalation/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ValidatingPolicy
 metadata:
   name: disallow-privilege-escalation
 status:
-  conditions:
+  conditionStatus:
+    conditions:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
