--- a/pod-security-vpol/restricted/require-run-as-nonroot/.chainsaw-test/policy-ready.yaml
+++ b/pod-security-vpol/restricted/require-run-as-nonroot/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ValidatingPolicy
 metadata:
   name: require-run-as-nonroot
 status:
-  conditions:
+  conditionStatus:
+    conditions:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
