--- a/pod-security-vpol/restricted/restrict-volume-types/.chainsaw-test/policy-ready.yaml
+++ b/pod-security-vpol/restricted/restrict-volume-types/.chainsaw-test/policy-ready.yaml
@@ -3,7 +3,8 @@ kind: ValidatingPolicy
 metadata:
   name: restrict-volume-types
 status:
-  conditions:
+  conditionStatus:
+    conditions:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
